--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon</title>
     <!-- Main Style File -->
-    <link rel="stylesheet" href="/css/leon.css">
+    <link rel="stylesheet" href="css/leon.css">
     <!-- Normalize File -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Font ICON Library -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- WORK SANS FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
