--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="logoMenu container">
             <div class="logo">
-                <img src="/imgs/logo.png" alt="">
+                <img src="imgs/logo.png" alt="">
             </div>
             <div class="menuIcon">
                 <i class="fa-solid fa-bars"></i>
